# wage_predictor

./: .gitignore  LICENSE  README.md  model.pkl  model_training.ipynb  pyproject.toml  requirements  requirements.txt  user_data.csv
data/: Salaries.csv
src/: main.py  model prediction.ipynb
