[tool.poetry]
name = "wage-predictor"
version = "0.1.0"
description = ""
authors = ["AddonayOsoro <oaddonay@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.37.1"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.2"
beautifulsoup4 = "^4.12.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
