[tool.poetry]
name = "wage"
version = "0.1.0"
description = ""
authors = ["AddonayOsoro <oaddonay@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.0"
pandas = "^2.2.2"
streamlit = "^1.38.0"
scikit-learn = "^1.5.1"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
